# proyecto-ml-Gabriel-Hinostroza-Pedro-Barrientos

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml
notebooks/: Fase1_Negocio.ipynb  Fase2_Compren.ipynb  Fase3_prep.ipynb
src/proyecto_ml_gabriel_hinostroza_pedro_barrientos/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/proyecto_ml_gabriel_hinostroza_pedro_barrientos/pipelines/data_processing/: nodes.py  pipeline.py
