[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "proyecto_ml_gabriel_hinostroza_pedro_barrientos"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro[jupyter]~=1.0.0", "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0", "kedro-viz>=6.7.0", "scikit-learn~=1.5.1", "seaborn~=0.12.1",]

[project.scripts]
proyecto-ml-gabriel-hinostroza-pedro-barrientos = "proyecto_ml_gabriel_hinostroza_pedro_barrientos.__main__:main"

[tool.kedro]
package_name = "proyecto_ml_gabriel_hinostroza_pedro_barrientos"
project_name = "Proyecto ML Gabriel Hinostroza-Pedro Barrientos"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "proyecto_ml_gabriel_hinostroza_pedro_barrientos.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "6e2a50d6acc047bab1853e551221761f"
